tests/error/move_global.bz
// error: unable to move non-local variable 'i'
// note: variable was declared here
let i = 0;

function test()
{
	move i;
}
